@@ -2,6 +2,12 @@ This documents significant changes in the 1.0 branch of ksh 93u+m.
 For full details, see the git log at: https://github.com/ksh93/ksh/tree/1.0
 Uppercase BUG_* IDs are shell bug IDs as used by the Modernish shell library.
 
+2024-12-05:
+
+- Fixed an issue in the vi line editors where lines beginning with whitespace
+  could not be recalled from the history (e.g. with arrow up). Bug introduced
+  on 2022-10-31.
+
 2024-11-26:
 
 - The -v/--verbose option of the cp, mv and ln built-in commands (which are
